fix(slider): handle slider better on mobile screens

--- a/src/styles/Slider.module.scss
+++ b/src/styles/Slider.module.scss
@@ -25,6 +25,14 @@
     visibility: hidden;
     transition: opacity 0.5s, visibility 0.5s;
 }
+
+@media screen and (max-width: 768px) {
+    .sliderCaption {
+       font-size: 12px;
+       line-height: 15px;
+    }
+}
+    
     
 .visible {
     opacity: 1;
